--- a/Training-wmqrTest/Training-wmqrTest.csproj
+++ b/Training-wmqrTest/Training-wmqrTest.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Data.SQLite.Linq">
       <HintPath>..\packages\System.Data.SQLite.1.0.81.0\lib\net40\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\DocumentControllerTests.cs" />
     <Compile Include="Models\DocumentTests.cs" />
     <Compile Include="Models\UserTests.cs" />
     <Compile Include="TestSetup.cs" />
