--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DocumentCrawler\packages.config" />
   <repository path="..\Training-wmqr\packages.config" />
   <repository path="..\Training-wmqrTest\packages.config" />
 </repositories>
