--- a/Training-wmqr/Web.config
+++ b/Training-wmqr/Web.config
@@ -5,6 +5,12 @@
   -->
 
 <configuration>
+
+  <configSections>
+    <section name="activerecord" type="Castle.ActiveRecord.Framework.Config.ActiveRecordSectionHandler, Castle.ActiveRecord" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+  </configSections>
+  
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
     <add key="webpages:Version" value="2.0.0.0" />
@@ -16,7 +22,10 @@
 
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
-
+    <authentication mode="Windows" />
+    <authorization>
+      <deny users="?" />
+    </authorization>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -35,4 +44,39 @@
     <modules runAllManagedModulesForAllRequests="true" />
     
   </system.webServer>
+
+  <activerecord isDebug="false">
+    <config>
+      <add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider" />
+      <add key="dialect" value="NHibernate.Dialect.SQLiteDialect" />
+      <add key="connection.driver_class" value="NHibernate.Driver.SQLite20Driver" />
+      <add key="connection.connection_string" value="Data Source=training.db;Version=3;New=True;PRAGMA encoding=UTF-8;" />
+      <add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory,NHibernate.ByteCode.Castle" />
+      <add key="show_sql" value="true" />
+    </config>
+  </activerecord>
+
+  <log4net debug="true">
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender, log4net">
+      <param name="File" value="log.txt"/>
+      <param name="AppendToFile" value="true"/>
+      <rollingStyle value="Date"/>
+      <datePattern value="yyyyMMdd"/>
+      <maxSizeRollBackups value="7"/>
+      <layout type="log4net.Layout.PatternLayout, log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
+      </layout>
+    </appender>
+
+    <root>
+      <priority value="ERROR"/>
+      <appender-ref ref="LogFileAppender"/>
+    </root>
+    <logger name="NHibernate">
+      <level value="WARN" />
+    </logger>
+    <logger name="NHibernate.SQL">
+      <level value="DEBUG" />
+    </logger>
+  </log4net>
 </configuration>
