Added User controller and views

--- a/Training-wmqrTest/Training-wmqrTest.csproj
+++ b/Training-wmqrTest/Training-wmqrTest.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\UserControllerTests.cs" />
     <Compile Include="Controllers\DocumentControllerTests.cs" />
     <Compile Include="Models\DocumentTests.cs" />
     <Compile Include="Models\UserTests.cs" />
