Added some helpers and extension methods
Added actions to be able to add/remove a favourite document

--- a/Training-wmqr/Training-wmqr.csproj
+++ b/Training-wmqr/Training-wmqr.csproj
@@ -127,6 +127,9 @@
     </Compile>
     <Compile Include="Infrastructure\CurrentUser.cs" />
     <Compile Include="Infrastructure\ICurrentUser.cs" />
+    <Compile Include="Infrastructure\LinqExtensions.cs" />
+    <Compile Include="Infrastructure\HttpUser.cs" />
+    <Compile Include="Infrastructure\ViewHelpers.cs" />
     <Compile Include="Models\Document.cs" />
     <Compile Include="Models\Favourite.cs" />
     <Compile Include="Models\User.cs" />
