--- a/Training-wmqr/Training-wmqr.csproj
+++ b/Training-wmqr/Training-wmqr.csproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Public\CSS\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -177,6 +178,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\User\Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_Layout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
