--- a/Training-wmqr/Training-wmqr.csproj
+++ b/Training-wmqr/Training-wmqr.csproj
@@ -121,14 +121,17 @@
   <ItemGroup>
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\DocumentController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\CurrentUser.cs" />
+    <Compile Include="Infrastructure\ExpandoObjectConverter.cs" />
     <Compile Include="Infrastructure\ICurrentUser.cs" />
     <Compile Include="Infrastructure\LinqExtensions.cs" />
     <Compile Include="Infrastructure\HttpUser.cs" />
+    <Compile Include="Infrastructure\Serializer.cs" />
     <Compile Include="Infrastructure\ViewHelpers.cs" />
     <Compile Include="Models\Document.cs" />
     <Compile Include="Models\Favourite.cs" />
@@ -139,6 +142,10 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Content Include="Global.asax" />
+    <Content Include="Public\Scripts\Application.js" />
+    <Content Include="Public\Scripts\Vendor\jquery-1.7.2-vsdoc.js" />
+    <Content Include="Public\Scripts\Vendor\jquery-1.7.2.js" />
+    <Content Include="Public\Scripts\Vendor\jquery-1.7.2.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -184,6 +191,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\_ViewStart.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
