Added ScopeManagement class Modified tests to use ResetScope after making changes that need to be committed for later retrieval in the same test

--- a/Training-wmqrTest/Training-wmqrTest.csproj
+++ b/Training-wmqrTest/Training-wmqrTest.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Controllers\UserControllerTests.cs" />
     <Compile Include="Controllers\DocumentControllerTests.cs" />
+    <Compile Include="Framework\ScopeManagement.cs" />
     <Compile Include="Models\DocumentTests.cs" />
     <Compile Include="Models\UserTests.cs" />
     <Compile Include="TestSetup.cs" />
