--- a/Training-wmqr/Training-wmqr.csproj
+++ b/Training-wmqr/Training-wmqr.csproj
@@ -142,6 +142,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Content Include="Global.asax" />
+    <Content Include="Public\CSS\style.css" />
     <Content Include="Public\Scripts\Application.js" />
     <Content Include="Public\Scripts\Vendor\jquery-1.7.2-vsdoc.js" />
     <Content Include="Public\Scripts\Vendor\jquery-1.7.2.js" />
@@ -157,7 +158,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Public\CSS\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
