--- a/Training-wmqr/packages.config
+++ b/Training-wmqr/packages.config
@@ -11,5 +11,6 @@
   <package id="Microsoft.Net.Http" version="2.0.20505.0" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Newtonsoft.Json" version="4.5.1" />
+  <package id="Ninject" version="3.0.1.10" />
   <package id="System.Data.SQLite" version="1.0.81.0" />
 </packages>
